[package]
name = "flurry"
version = "0.2.1"
edition = "2018"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "Rust port of Java's ConcurrentHashMap"
repository = "https://github.com/jonhoo/flurry.git"

keywords = ["hashmap","concurrent","map"]
categories = ["concurrency", "data-structures"]

exclude = ["/jsr166/**"]

[badges]
azure-devops = { project = "jonhoo/jonhoo", pipeline = "flurry", build = "15" }
codecov = { repository = "jonhoo/flurry", branch = "master", service = "github" }
maintenance = { status = "experimental" }

[features]
sanitize = ['crossbeam-epoch/sanitize']
serialize = ["serde"]

[dependencies]
crossbeam-epoch = "0.8.2"
parking_lot = "0.10"
num_cpus = "1.12.0"
serde = {version = "1.0.105", optional = true}

[dependencies.ahash]
version = "0.3.2"
default-features = false

[dev-dependencies]
rand = "0.7"
rayon = "1.3"
criterion = "0.3"

[[bench]]
name = "flurry_dashmap" 
harness = false

[[bench]]
name = "flurry_hashbrown" 
harness = false
