[package]
name = "flurry"
version = "0.4.0"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "Rust port of Java's ConcurrentHashMap"
repository = "https://github.com/jonhoo/flurry.git"

keywords = ["hashmap","concurrent","map"]
categories = ["concurrency", "data-structures"]

exclude = ["/jsr166/**"]

[badges]
azure-devops = { project = "jonhoo/jonhoo", pipeline = "flurry", build = "15" }
codecov = { repository = "jonhoo/flurry", branch = "master", service = "github" }
maintenance = { status = "experimental" }

[dependencies]
parking_lot = "0.12"
num_cpus = "1.12.0"
rayon = {version = "1.3", optional = true}
serde = {version = "1.0.105", optional = true}
seize = "0.2.1"
fast-counter = "0.0.2"

[dependencies.ahash]
version = "0.7.6"
default-features = false

[dev-dependencies]
rand = "0.8"
rayon = "1.3"
criterion = "0.3"
serde_json = "1.0.50"

[[bench]]
name = "flurry_dashmap" 
harness = false

[[bench]]
name = "flurry_hashbrown" 
harness = false
